--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,14 +29,14 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
-    testImplementation 'junit:junit:4.+'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.3.0'
+    testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'androidx.test.ext:junit:' + rootProject.extJUnitVersion;
     androidTestImplementation 'androidx.test:core:' + rootProject.coreVersion;
     androidTestImplementation 'androidx.test:runner:' + rootProject.runnerVersion;
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:' + rootProject.uiAutomatorVersion;
     androidTestImplementation 'org.hamcrest:hamcrest-integration:1.3'
-    androidTestImplementation 'com.squareup.okhttp3:okhttp:3.2.0'
+    androidTestImplementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
 }
